--- a/src/app/experience/experience.component.html
+++ b/src/app/experience/experience.component.html
@@ -1,12 +1,16 @@
-<div style="display: flex; justify-content: center; align-items: center;">
-    <div class="timeline">
-        <div *ngFor="let experience of experiences" class="timeline-item">
-            <div class="timeline-icon"></div>
-            <div class="timeline-content">
-                <div class="role-box">{{ experience.role }}</div>
-                <p class="company">{{ experience.company }}</p>
+<div class="container">
+    <div class="layout">
+        <p-timeline [value]="experiences" layout="horizontal">
+            <ng-template pTemplate="content" let-experience>
+                <div class="role-box" (click)="showDescription(experience)">{{ experience.role }}</div>
+                <p class="company" (click)="showDescription(experience)">{{ experience.company }}</p>
                 <p class="duration">{{ experience.duration }}</p>
-            </div>
-        </div>
+            </ng-template>
+        </p-timeline>
     </div>
+
+    <div class="description">
+        <p *ngIf="selectedExperience" #description class="description" [innerHTML]="selectedExperience.description"></p>
+    </div>
+
 </div>
