--- a/src/app/experience/experience.component.scss
+++ b/src/app/experience/experience.component.scss
@@ -1,58 +1,45 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-body {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  background-color: #f5f5f5;
-}
-
-.timeline {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 80%;
-  position: relative;
-}
-
 .timeline-item {
   display: flex;
-  flex-direction: column;
   align-items: center;
   position: relative;
-  width: 25%;
-}
-
-.timeline-icon {
-  width: 30px;
-  height: 30px;
-  background-color: #30ff41d5;
-  border-radius: 50%;
-  position: relative;
-  margin-bottom: 5px;
+  margin: 10px 0;
 }
 
 .timeline-content {
-  text-align: center;
-  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: left;
 }
 
 .role-box {
   background: rgba(255, 255, 255, 0.2);
   padding: 20px;
   border-radius: 100px;
-  font-size: 18px;
+  font-size: 20px;
   font-weight: bold;
   margin-bottom: 4px;
   backdrop-filter: blur(8px);
   margin-top: 3px;
   margin-left: 5px;
   margin-right: 5px;
+  cursor: pointer;
+  transition: transform 0.3s ease, cursor 0.3s ease;
+}
+
+.role-box:hover {
+  transform: scale(1.1);
+}
+
+.container {
+  opacity: 0;
+  transform: translateY(100px);
+  transition: opacity 1s ease, transform 1s ease;
+}
+
+.container.in-view {
+  opacity: 1;
+  transform: translateY(0);
 }
 
 
@@ -64,16 +51,25 @@ body {
 
 .duration {
   font-size: 14px;
+  color: #777;
 }
 
-.timeline::before {
-  content: "";
-  position: absolute;
-  top: 10%;
-  left: 0;
+.layout {
   width: 100%;
-  height: 2px;
-  background-color: #ddd;
-  transform: translateY(-50%);
-  z-index: -1;
+}
+
+.role-box,
+.company,
+.duration {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.description {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  transition: transform 0.5s ease-in-out;
 }
