--- a/src/app/menu-tabs/menu-tabs.component.css
+++ b/src/app/menu-tabs/menu-tabs.component.css
@@ -16,11 +16,14 @@
 }
 
 .tab-title {
-    padding: 12px 25px;
+    padding: 12px 40px;
     font-size: 16px;
     background-color: rgba(255, 255, 255, 0.2);
     border: 2px solid rgba(255, 255, 255, 0.3);
     border-radius: 25px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     transition: all 0.3s ease;
 }
 
