--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,9 +4,9 @@
 
 body {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
-    // background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.6)), url('./assets/blue_aurora-wallpaper-2560x1440.jpg') no-repeat center center fixed;
+    background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.6)), url('./app/home.webp') no-repeat center center fixed;
     background-size: cover;
-    background-color: #0f0f0f;
+    background-color: #000000;
     color: #eaeaea;
     margin: 0;
     padding: 0;
